@@ -5,7 +5,7 @@ import org.apereo.inspektr.audit.spi.AuditResourceResolver;
 import lombok.Setter;
 import org.apereo.cas.util.AopUtils;
 import org.aspectj.lang.JoinPoint;
-import java.util.Collections;
+import java.util.List;
 import java.util.function.Function;
 
 /**
@@ -47,7 +47,7 @@ public class FirstParameterAuditResourceResolver implements AuditResourceResolve
             return AuditTrailManager.toJson(arg);
         }
         return resourceString != null
-            ? this.resourceString + Collections.singletonList(arg)
+            ? this.resourceString + List.of(arg)
             : arg.toString();
     }
 
